[project]
name = "dagster-diagnosis-agent"
version = "0.1.0"
description = "A diagnostic agent for Dagster."
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents",
]

[project.scripts]
dagster-diagnosis-agent = "dagster_diagnosis_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
